# Donna

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: launch.json
.cursor/rules/: push-to-github.mdc
.github/workflows/: ci.yml  pages.yml  release.yml
crates/donna-core/: Cargo.toml
crates/donna-core/src/: agent.rs  audio.rs  bundle.rs  db.rs  embeddings.rs  error.rs  knowledge.rs  lib.rs  ops.rs  providers.rs  retrieval.rs  review.rs  scheduler.rs  secrets.rs  skills.rs  tools.rs  trust.rs
crates/donna-core/src/integrations/: fathom.rs  github.rs  mod.rs  telegram.rs  whatsapp.rs
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  ROADMAP.md  index.md
docs/superpowers/plans/: 2026-07-07-phase1-foundation.md  2026-07-07-phase2-hands.md  2026-07-08-packaged-app-and-landing-page.md  2026-07-08-phase3-reach.md  2026-07-08-phase4-growth.md  2026-07-08-phase5-voice.md  2026-07-08-phase6-craft.md
docs/superpowers/specs/: 2026-07-07-donna-jarvis-design.md  2026-07-08-packaged-app-and-landing-page-design.md
donna-server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
donna-server/src/: auth.rs  calendar.rs  config.rs  lib.rs  main.rs  messaging.rs  news.rs  rpc.rs  state.rs  voice.rs  weather.rs  webhook.rs  ws.rs
donna-server/tests/: http.rs  voice.rs  webhook.rs  ws.rs
knowledge-base/: README.md
scripts/: build-dmg-background.mjs  build-docs-index.mjs  build-sidecar.sh
site/: docs.html  index.html  install.sh  main.js  styles.css
site/docs/: architecture.html  building.html  index.html  integrations.html  models.html  privacy.html  search-index.js  search.js  self-hosting.html  troubleshooting.html  updates.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  quick-chat.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  db.rs  docs.rs  embedded_server.rs  embeddings.rs  error.rs  knowledge.rs  lib.rs  main.rs  oauth.rs  ollama.rs  providers.rs  quick_chat.rs  retrieval.rs  scheduler.rs  secrets.rs
src-tauri/src/integrations/: discord.rs  fathom.rs  google.rs  linear.rs  mod.rs  news.rs  notion.rs  slack.rs  telegram.rs  weather.rs  whatsapp.rs
src/components/: DesktopRequired.tsx  DonnaMessage.tsx  DonnaQuestion.tsx  LocalBrainSetup.tsx  Markdown.tsx  PageShell.tsx  Sidebar.tsx  ui.tsx
src/components/mindmap/: CategoryPicker.tsx  KgCircleNode.tsx  KgColoredEdge.tsx  MindMapGraphLinks.tsx  NodeDetailPanel.tsx  NodeEditor.tsx
src/lib/: api.ts  donnaQuestions.ts  server.ts  tauri.ts  useConfig.tsx  voice.ts
src/lib/memory/: index.ts  types.ts
src/lib/mindmap/: forceLayout.ts  resolveEdges.ts
src/lib/models/: cloud.ts  index.ts  ollama.ts  providers.ts  types.ts
src/routes/: Calendar.tsx  Chat.tsx  Dashboard.tsx  Docs.tsx  Integrations.tsx  MindMap.tsx  Notifications.tsx  Onboarding.tsx  Productivity.tsx  ProfileOnboarding.tsx  Projects.tsx  QuickChat.tsx  Settings.tsx  Skills.tsx
src/styles/: global.css
