[workspace]
resolver = "2"
members = ["src-tauri", "donna-server", "crates/donna-core"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
keyring = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
open = "5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tar = "0.4"
flate2 = "1"
