[package]
name = "donna-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "donna-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
