[package]
name = "donna-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "donna_server"
path = "src/lib.rs"

[[bin]]
name = "donna-server"
path = "src/main.rs"

[dependencies]
donna-core = { path = "../crates/donna-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
