[package]
name = "donna"
version = "0.0.0"
description = "Open-source, local-first AI personal assistant."
authors = ["Donna contributors"]
license = "MIT"
repository = "https://github.com/duckyquang/Donna"
edition = "2021"
rust-version = "1.77"

[lib]
name = "donna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
keyring = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }
open = "5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
