[package]
name = "donna"
version = "0.0.0"
description = "Open-source, local-first AI personal assistant."
authors = ["Donna contributors"]
license = "MIT"
repository = "https://github.com/duckyquang/Donna"
edition = "2021"
rust-version = "1.86"

[lib]
name = "donna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
donna-core = { path = "../crates/donna-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
open = "5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
tokio-util = "0.7"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
